[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/rooms/empty/0.png" type="Texture" id=1]
[ext_resource path="res://Assets/visited.png" type="Texture" id=2]
[ext_resource path="res://Assets/window_dark.png" type="Texture" id=3]
[ext_resource path="res://Assets/door.png" type="Texture" id=4]
[ext_resource path="res://Src/Room.gd" type="Script" id=5]

[node name="Room" type="NinePatchRect"]
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource( 5 )

[node name="Image" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 245.0
texture = ExtResource( 1 )
expand = true

[node name="RoomButton" type="Button" parent="Image"]
margin_right = 240.0
margin_bottom = 240.0
mouse_default_cursor_shape = 2
flat = true

[node name="Visited" type="TextureRect" parent="."]
visible = false
margin_left = 15.0
margin_top = 190.0
margin_right = 75.0
margin_bottom = 238.0
texture = ExtResource( 2 )

[node name="Exit" type="TextureRect" parent="."]
visible = false
margin_left = 190.0
margin_top = 180.0
margin_right = 234.0
margin_bottom = 238.0
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="Image/RoomButton" to="." method="_on_RoomButton_mouse_entered"]
[connection signal="mouse_exited" from="Image/RoomButton" to="." method="_on_RoomButton_mouse_exited"]
[connection signal="pressed" from="Image/RoomButton" to="." method="_on_RoomButton_pressed"]
